:recycle: Rename share api to sharing
