# swagger.yaml
@@ -197,54 +197,6 @@ paths:
           description: User not logged in
         '403':
           description: Not authorized to do this action
-  /products/shared/{token}:
-    summary: 'Shared products collection'
-    parameters:
-      - name: 'token'
-        in: 'path'
-        description: 'Token generated by the owner of the product'
-        required: true
-    get:
-      security: [ ]
-      summary: 'Get list of shared products'
-      tags:
-        - Products
-      responses:
-        '200':
-          description: 'Successful response'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ArrayOfProducts'
-        '403':
-          description: 'User not authorized'
-  /products/{productId}/shared/{token}:
-    summary: Shared product
-    parameters:
-      - name: "productId"
-        in: "path"
-        description: "Id of the product"
-        required: true
-      - name: "token"
-        in: "path"
-        description: "Token generated by the owner of the product"
-        required: true
-    get:
-      summary: Get shared product by id
-      security: [ ]
-      tags:
-        - Products
-      responses:
-        '200':
-          description: 'Successful response'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Product'
-        '403':
-          description: 'User not authorized'
-        '404':
-          description: 'Product not found'
   /categories/:
     summary: Categories Collection
     get:
@@ -424,19 +376,19 @@ paths:
           description: Group not found
         '500':
           description: Something went wrong when retrieving group
-  /share/token:
-    summary: Food storage share token
+  /sharing/token:
+    summary: Food storage shared token
     get:
-      summary: Get share token
+      summary: Get shared token
       tags:
-        - Share
+        - Sharing
       responses:
         '200':
           description: 'Successful response'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ShareToken'
+                $ref: '#/components/schemas/SharingToken'
         '401':
           description: 'User not logged in'
         '404':
@@ -444,14 +396,14 @@ paths:
     post:
       summary: Generate a new token
       tags:
-        - Share
+        - Sharing
       responses:
         '200':
           description: 'Successful insert'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ShareToken'
+                $ref: '#/components/schemas/SharingToken'
         '401':
           description: 'User not logged in'
         '409':
@@ -459,18 +411,66 @@ paths:
     delete:
       summary: Delete/revoke current token
       tags:
-        - Share
+        - Sharing
       responses:
         '200':
           description: 'Successful response'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ShareToken'
+                $ref: '#/components/schemas/SharingToken'
         '401':
           description: 'User not logged in'
         '403':
           description: 'Not authorized to do this action'
+  /sharing/{token}/products:
+    summary: 'Shared products collection'
+    parameters:
+      - name: 'token'
+        in: 'path'
+        description: 'Token generated by the owner of the product'
+        required: true
+    get:
+      security: [ ]
+      summary: 'Get list of shared products'
+      tags:
+        - Sharing
+      responses:
+        '200':
+          description: 'Successful response'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ArrayOfProducts'
+        '403':
+          description: 'User not authorized'
+  /sharing/{token}/products/{productId}:
+    summary: 'Shared product'
+    parameters:
+      - name: "productId"
+        in: "path"
+        description: "Id of the product"
+        required: true
+      - name: "token"
+        in: "path"
+        description: "Token generated by the owner of the product"
+        required: true
+    get:
+      summary: Get shared product by id
+      security: [ ]
+      tags:
+        - Sharing
+      responses:
+        '200':
+          description: 'Successful response'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        '403':
+          description: 'User not authorized'
+        '404':
+          description: 'Product not found'
 
 components:
   securitySchemes:
@@ -536,30 +536,34 @@ components:
         lastname:
           type: string
           description: 'Lastname of the user'
-    ShareToken:
+    SharingToken:
       type: object
-      required:
-        - id
-        - share
       properties:
-        message:
-          type: string
-          description: 'Response status description'
-        share:
+        data:
           type: object
+          required:
+            - sharing
           properties:
-            token:
+            message:
               type: string
-              description: 'Share token'
-            request:
+              description: 'Response status description'
+            sharing:
               type: object
+              required:
+                - token
               properties:
-                type:
+                token:
                   type: string
-                  description: 'Request method'
-                url:
-                  type: string
-                  description: 'Request url'
+                  description: 'Sharing token'
+                request:
+                  type: object
+                  properties:
+                    type:
+                      type: string
+                      description: 'Request method'
+                    url:
+                      type: string
+                      description: 'Request url'
     Product:
       type: object
       properties:
